--- a/index.html
+++ b/index.html
@@ -11,3 +11,7 @@
     <script src="./js/main.js"></script>
     <title> Welcome Emoji Store</title>
 </head>
+
+<body>
+    <div class="navbar">
+        <img scr="./assets/img/
