--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
                     </p>
                     <button class="btn btn-secondary" onClick="getSwagged()">Get Emoji Swagged!</button>
                 </div>
-                <img scr="./assets/img/
+                <img scr="./assets/img/devices.PNG
             
        
