--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-    <link rel="shortcut icon" href="./assets/img/emo4.png" type="image/x-icon">
     <script src="./js/main.js"></script>
     <title>Emoji Store</title>
 </head>
 
 <body>
     <div class="navbar">
-        <img scr="./assets/img/smileyface.png" alt="Emoji" class="brand">
+        <img scr="smileyface.png" alt="Emoji" class="brand">
         <div class="brand-text">Emoji Store</div>
         <div class="navigation">
             <a href="#home">Store</a>
@@ -39,7 +38,7 @@
                     </p>
                     <button class="btn btn-secondary" onClick="getSwagged()">Get Emoji Swagged!</button>
                 </div>
-                <img scr="./assets/img/devices.PNG" alt="mockup" class="emoji-devices">
+                <img scr="devices.PNG" alt="mockup" class="emoji-devices">
             </div>
             
         </div>
