--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="navbar">
-        <img scr="smileyface.png" alt="Emoji" class="brand">
+        <img src="smileyface.png" alt="smileyface" class="brand"/>
         <div class="brand-text">Emoji Store</div>
         <div class="navigation">
             <a href="#home">Store</a>
