--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     </p>
                     <button class="btn btn-secondary" onClick="getSwagged()">Get Emoji Swagged!</button>
                 </div>
-                <img scr="devices.PNG" alt="mockup" class="emoji-devices">
+                <img scr="devices.PNG" alt="devices" class="emoji-devices">
             </div>
             
         </div>
