--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <img src="smileyface.png" alt="smileyface" class="brand"/>
         <div class="brand-text">Emoji Store</div>
         <div class="navigation">
-            <a href="#home">Store</a>
-            <a href="#our_products">Products & Customers</a>
-            <a href="#forum">Forum</a>
-            <a href="#about_us">About Us</a>
-            <a href="#contact_us">Contact Us</a>
+            <a href="#home"><strong>Store</strong></a>
+            <a href="#our_products"><strong>Products & Customers</strong></a>
+            <a href="#forum"><strong>Forum>/strong></a>
+            <a href="#about_us"><strong>About Us</strong></a>
+            <a href="#contact_us"><strong>Contact Us</strong></a>
         </div>
     </div>
     <div class="main">
