--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="navigation">
             <a href="#home"><strong>Store</strong></a>
             <a href="#our_products"><strong>Products & Customers</strong></a>
-            <a href="#forum"><strong>Forum>/strong></a>
+            <a href="#forum"><strong>Forum></strong></a>
             <a href="#about_us"><strong>About Us</strong></a>
             <a href="#contact_us"><strong>Contact Us</strong></a>
         </div>
