--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <script src="./js/main.js"></script>
-    <title><strong>Emoji Store</strong></title>
+    <title>Emoji</title>
 </head>
 
 <body>
     <div class="navbar">
         <img src="smileyface.png" alt="smileyface" class="brand"/>
-        <div class="brand-text">Emoji Store</div>
+        <div class="brand-text"><strong>Emoji Store</strong></div>
         <div class="navigation">
             <a href="#home"><strong>Store</strong></a>
             <a href="#our_products"><strong>Products & Customers</strong></a>
