--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="big-image">
             <div class="content">
                 <div class="overlay-text">
-                    <h1>Emoji Store</h1>
+                    <h1><strong>Emoji Store</strong></h1>
                     
                     <p>
                         The best way to communicate and speak your mind
