--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         you by buying our Emoji-Swag on our online store! 
                         
                     </p>
-                    <button class="btn btn-secondary" onClick="getSwagged()"><strong>Get Emoji Swagged!</strong></button>
+                   <button class="btn btn-secondary" onClick="getSwag()">Get Emoji Swag!</button>
                 </div>
                 <img src="devices.PNG" alt="devices" class="emoji-devices"/>
             </div>
